<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="50dp"
    android:gravity="center"
    android:text="Gasolineras"
    android:textSize="30sp"></TextView>

<TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="34dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="50dp"
    android:text="@string/Nombre" />

<EditText
    android:id="@+id/edtnombre"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="match_parent"
    android:layout_height="34dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="50dp"
    android:text="@string/empresa" />

<EditText
    android:id="@+id/edtempresa"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="match_parent"
    android:layout_height="34dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="50dp"
    android:text="@string/departamento" />

<EditText
    android:id="@+id/edtdepartamento"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:ems="10"
    android:inputType="textPersonName" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="match_parent"
    android:layout_height="34dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="50dp"
    android:text="@string/municipio" />

<EditText
    android:id="@+id/edtmunicipio"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:ems="10"
    android:inputType="textPersonName" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/latitud" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/longitud" />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/edtlatitud"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:inputType="numberSigned|number|numberDecimal" />

    <EditText
        android:id="@+id/edtlongitud"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:inputType="numberSigned|number|numberDecimal" />

</LinearLayout>

<Button
    android:id="@+id/btnagregar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:text="Agregar estacion de Gasolina" />

<Button
    android:id="@+id/btnmapa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:text="Ver Mapa" />


</LinearLayout>